--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Ftuuky's blog
-description: experimental ❤
+description: experimental 🤖❤
 github_username: ftuuky
 
 # Email and twitter are optional:
