--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Ftuuky's blog
-description: experimental 🤖❤
-github_username: ftuuky
+title: 
+description: ❤️✖️🤖 
+github_username: ftuuky00
 
 # Email and twitter are optional:
 email: 
