--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ plugins:
   - jekyll-feed
 
 titles_from_headings:
-  enabled:     false
-  strip_title: true
+  enabled:     true
+  strip_title: false
   collections: true
 
