--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Ftuuky pages
+title: Counting bees with a bot
+author: Ftuuky
 description: ❤️✖️🤖 
 github_username: ftuuky00
 
